# LoopLab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: artifact_schemas.md  benchmarking.md  export_formats.md  index.md  psychopy_integration.md  quickstart.md
docs/concepts/: diagnostics.md  experiment_state.md  features.md  index.md  models.md  policies.md  replay.md  reports.md  streams.md  task_adapters.md
docs/deployment/: index.md  local_synthetic_development.md  lsl_caveats.md  lsl_compatibility_matrix.md  psychopy_task_integration.md
docs/extensions/: add_feature_extractor.md  add_model.md  add_policy.md  add_synthetic_scenario.md  custom_component_walkthrough.md  index.md
docs/tutorials/: adaptive_difficulty.md  index.md  model_feedback.md  psychopy_e2e.md
examples/: config_example.yaml
examples/adaptive_difficulty_demo/: README.md  config.yaml  plugins.py  run_demo.py
schemas/: benchmark_summary.schema.json  components_manifest.schema.json  diagnostics.schema.json  replay_result.schema.json  run_report.schema.json  session_summary.schema.json
tests/: __init__.py  conftest.py  test_artifact_schemas.py  test_benchmark_reference_bundles.py  test_buffer.py  test_debug_log.py  test_export_bids.py  test_features.py  test_integration_synthetic_lsl.py  test_logging.py  test_lsl_support.py  test_model_policy.py  test_plugin_stub.py  test_proof_run_e2e.py  test_replay.py  test_replay_agreement.py  test_replay_stressors.py  test_run_diagnostics.py  test_run_report.py  test_synthetic_scenarios.py  test_validate_config.py
(+94 files in other folders)
