[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looplab"
version = "0.3.0"
description = "EEG-first, Python-native closed-loop experiment SDK with LSL, PsychoPy, and deterministic replay"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LoopLab" }]
keywords = ["eeg", "lsl", "psychopy", "closed-loop", "neurofeedback", "bci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pylsl>=1.16",
    "jsonschema>=4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "PyYAML>=6"]
mne = ["mne>=1.5"]
psychopy = ["psychopy>=2023.2"]
yaml = ["pyyaml>=6"]
export = ["mne>=1.5"]
full = ["looplab[mne,psychopy,yaml]"]

[project.scripts]
looplab = "looplab.__main__:main"

[project.urls]
Repository = "https://github.com/looplab/looplab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
